# UML_project

./: .gitignore  README.md  data_analysis.py  evaluation.py  hyperparameter_tuning.py  main.py  models.py  preprocessing.py  pyproject.toml  train.py  train_test.py
